# rb-cli

./: .envrc  Cargo.toml  flake.nix  justfile  rustfmt.toml
src/: main.rs
