#                  _       
#    ___ _ __ __ _| |_ ___ 
#   / __| '__/ _` | __/ _ \
#  | (__| | | (_| | ||  __/
#   \___|_|  \__,_|\__\___|
#                       

[package]
name = "jules"
version = "0.1.0"
edition = "2021"

#      _                
#   __| | ___ _ __  ___ 
#  / _` |/ _ \ '_ \/ __|
# | (_| |  __/ |_) \__ \
#  \__,_|\___| .__/|___/
#            |_|        


[dependencies]

rayon = "1.8.1"
tokio = { version = "1.36.0", features = ["full"] }

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

reqwest = "0.11.24"
druid = { git = "https://github.com/linebender/druid.git" }
